--- a/infra/cluster/Pulumi.small-mysql.yaml
+++ b/infra/cluster/Pulumi.small-mysql.yaml
@@ -5,11 +5,11 @@ config:
     roleArn: arn:aws:iam::912773994842:role/BenchmarkClusterAdmin
   temporal-otb-benchmarks-cluster:AWS:
     Region: us-west-2
-    AvailabilityZones: ["us-west-2a", "us-west-2b"]
-    PrivateSubnetIds: ["subnet-087d78e9ce5694a3a", "subnet-08059b9744a32e9a8"]
-    RdsSubnetGroupName: "temporal-benchmark-rds-a06d894"
+    AvailabilityZones: ["us-west-2a", "us-west-2b", "us-west-2c"]
+    PrivateSubnetIds: ["subnet-00e269bfc224d9c88", "subnet-0331497242f215670", "subnet-0e19e96d60a8d43fe"]
+    RdsSubnetGroupName: "temporal-benchmark-rds-d034419"
     Role: BenchmarkClusterAdmin
-    VpcId: "vpc-0c5341406c8588895"
+    VpcId: "vpc-0f0ab8c917df6d422"
   temporal-otb-benchmarks-cluster:Benchmark:
     Workers:
       Pods: 1
