--- a/infra/cluster/Pulumi.xlarge-cassandra.yaml
+++ b/infra/cluster/Pulumi.xlarge-cassandra.yaml
@@ -11,18 +11,19 @@ config:
     Role: BenchmarkClusterAdmin
     VpcId: "vpc-0f0ab8c917df6d422"
   temporal-otb-benchmarks-cluster:Benchmark:
+    Namespaces: 6
+    ConcurrentWorkflows: 1800
+    Target: 10000
     Workers:
-      Pods: 2
+      Pods: 3
       CPU:
-        Request: 1
+        Request: 0.25
       Memory:
         Request: 50Mi
       WorkflowPollers: 100
       ActivityPollers: 150
     SoakTest:
-      ConcurrentWorkflows: 30
       Pods: 1
-      Target: 5000
       CPU:
         Request: 0.25
       Memory:
@@ -32,15 +33,15 @@ config:
       NodeType: r5.xlarge
       NodeCount: 3
       TemporalNodeType: c5.4xlarge
-      TemporalNodeCount: 4
+      TemporalNodeCount: 8
       WorkerNodeType: c5.xlarge
-      WorkerNodeCount: 3
+      WorkerNodeCount: 4
   temporal-otb-benchmarks-cluster:Persistence:
     Cassandra:
-      NodeType: m5.xlarge
-      NodeCount: 3
+      NodeType: c5.2xlarge
+      NodeCount: 15
       CPU:
-        Request: 4
+        Request: 8
       Memory:
         Request: 16Gi
     Visibility:
@@ -55,16 +56,16 @@ config:
       Memory:
         Request: 256Mi
     History:
-      Shards: 1024
+      Shards: 2048
       Pods: 12
       CPU:
-        Request: 2
+        Request: 4
       Memory:
         Request: 4Gi
     Matching:
       Pods: 6
       CPU:
-        Request: 1
+        Request: 2
       Memory:
         Request: 256Mi
     Worker:
