--- a/policy/pricing/package.json
+++ b/policy/pricing/package.json
@@ -2,7 +2,8 @@
   "name": "pricing-policy-pack",
   "version": "0.1.0",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test-pricing": "npx ts-node test-pricing.ts"
   },
   "dependencies": {
     "@pulumi/aws": "^6.80.0",
@@ -14,6 +15,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^14.0.0",
     "js-yaml": "^4.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.0.0"
   }
 }
