Include storage costs in Cassandra clusters.
Remote write metrics to an external prometheus instance for reporting.

--- a/infra/cluster/Pulumi.large-mysql.yaml
+++ b/infra/cluster/Pulumi.large-mysql.yaml
@@ -3,6 +3,10 @@ config:
   aws:region: us-west-2
   aws:assumeRole:
     roleArn: arn:aws:iam::912773994842:role/BenchmarkClusterAdmin
+  aws:defaultTags:
+    tags:
+      cluster: large-mysql
+      clusterSize: large
   temporal-otb-benchmarks-cluster:AWS:
     Region: us-west-2
     AvailabilityZones: ["us-west-2a", "us-west-2b", "us-west-2c"]
@@ -10,6 +14,7 @@ config:
     RdsSubnetGroupName: "temporal-benchmark-rds-d034419"
     Role: BenchmarkClusterAdmin
     VpcId: "vpc-0f0ab8c917df6d422"
+    PrometheusId: ws-cc07bde8-10f1-4360-99a9-a5ed8f9a0657
   temporal-otb-benchmarks-cluster:Benchmark:
     Namespaces: 3
     ConcurrentWorkflows: 270
