--- a/infra/cluster/Pulumi.xlarge-cassandra.yaml
+++ b/infra/cluster/Pulumi.xlarge-cassandra.yaml
@@ -3,6 +3,10 @@ config:
   aws:region: us-west-2
   aws:assumeRole:
     roleArn: arn:aws:iam::912773994842:role/BenchmarkClusterAdmin
+  aws:defaultTags:
+    tags:
+      cluster: xlarge-cassandra
+      clusterSize: xlarge
   temporal-otb-benchmarks-cluster:AWS:
     Region: us-west-2
     AvailabilityZones: ["us-west-2a", "us-west-2b", "us-west-2c"]
@@ -10,6 +14,7 @@ config:
     RdsSubnetGroupName: "temporal-benchmark-rds-d034419"
     Role: BenchmarkClusterAdmin
     VpcId: "vpc-0f0ab8c917df6d422"
+    PrometheusId: ws-cc07bde8-10f1-4360-99a9-a5ed8f9a0657
   temporal-otb-benchmarks-cluster:Benchmark:
     Namespaces: 6
     ConcurrentWorkflows: 1800
@@ -44,6 +49,8 @@ config:
         Request: 8
       Memory:
         Request: 16Gi
+      CommitLogStorage: 1Gi
+      DataStorage: 512Gi
     Visibility:
       OpenSearch:
         InstanceType: m5.large.search
