--- a/infra/cluster/package.json
+++ b/infra/cluster/package.json
@@ -2,6 +2,7 @@
     "name": "env",
     "main": "index.ts",
     "devDependencies": {
+        "@types/lodash.merge": "^4.6.9",
         "@types/node": "^22"
     },
     "dependencies": {
@@ -9,6 +10,7 @@
         "@pulumi/awsx": "^2.21.1",
         "@pulumi/eks": "^3.9.1",
         "@pulumi/kubernetes": "^4.23.0",
-        "@pulumi/pulumi": "^3.169.0"
+        "@pulumi/pulumi": "^3.169.0",
+        "lodash.merge": "^4.6.2"
     }
 }
