--- a/policy/summary/package.json
+++ b/policy/summary/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "pricing-policy-pack",
+  "name": "summary-policy-pack",
   "version": "0.1.0",
   "scripts": {
-    "build": "tsc",
-    "test-pricing": "npx ts-node test-pricing.ts"
+    "build": "tsc"
   },
   "dependencies": {
-    "@pulumi/aws": "^6.80.0",
-    "@pulumi/eks": "^3.9.1",
     "@pulumi/policy": "^1.5.0",
     "@pulumi/pulumi": "^3.169.0"
   },
